# NRD_aerodynamics_3Dsimulation

./: .gitignore  AboutCalculation.md  LICENSE.md  README.md  csv2graph.py  main.py  plt_droppoint_v2.py  pyproject.toml
Codes/: plot_dp_fom_csv.py  plt_droppoint_v3.py  simudata2plot.py
